# srtmerger

./: .gitignore  README.md  main.py  pyproject.toml  test.py
.github/workflows/: python-package.yml
src/srtmerger/: __init__.py  main.py  merger.py  utils.py
test_assets/: en.srt  fa.srt
test_srt/: en.srt  fa.srt
tests/: test_main.py  test_merger.py
